# MicroAgent

./: .gitignore  README.md  agent_loop.py  main.py  memory.py  messages.py  prompt.py  pyproject.toml  setup.py  tool_registry.py  tools.py  tty_app.py
docs/: 01-messages-design.md  02-tool-registry-design.md  03-agent-loop-design.md  04-prompt-design.md  05-memory-design.md  06-main-entry-design.md  DEVELOPMENT_LOG.md
docs/superpowers/plans/: 2026-06-13-tools-split.md
docs/superpowers/specs/: 2026-06-13-skills-system-design.md
micro_agent/: __init__.py  __main__.py  main.py  memory.py  messages.py  prompt.py  skills.py  tool_registry.py  tty_app.py
micro_agent/compact/: auto_compact.py  context_collapse.py  microcompact.py  snip_compact.py
micro_agent/tools/: __init__.py  load_skill.py  web_search.py
micro_agent/tui/: __init__.py  input_parser.py  screen.py
tools/: __init__.py  ask_user.py  calculator.py  code_exec.py  edit_file.py  file_ops.py  grep_files.py  list_files.py  search.py  web.py  wiki.py  write_file.py
