[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "micro-agent"
version = "0.2.0"
description = "A lightweight terminal coding assistant — Python edition"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MicroAgent Team"}]
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
micro-agent = "micro_agent.tty_app:main"
micro-agent-simple = "micro_agent.main:main"

[tool.setuptools.packages.find]
include = ["micro_agent*"]
